--- a/sale_payment/views/sale_order_view.xml
+++ b/sale_payment/views/sale_order_view.xml
@@ -1,43 +1,47 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-    <data>
-
-        <record id="action_sale_payment" model="ir.actions.act_window">
-            <field name="name">Register Payment</field>
-            <field name="res_model">account.payment</field>
-            <field name="view_type">form</field>
-            <field name="view_mode">form</field>
-            <field name="view_id" ref="account.view_account_payment_invoice_form" />
-            <field name="target">new</field>
-        </record>
 
         <record id="view_quotation_sale_payment_form" model="ir.ui.view">
             <field name="model">sale.order</field>
             <field name="inherit_id" ref="sale.view_quotation_tree" />
             <field name="arch" type="xml">
                 <field name="amount_total" position="after">
-                    <field name="amount_paid" />
+                    <field
+                    name="amount_down_payment"
+                    widget="monetary"
+                    optional="hide"
+                />
                 </field>
             </field>
         </record>
 
-        <record id="view_register_payment_sale_form" model="ir.ui.view">
+        <record id="view_order_form" model="ir.ui.view">
             <field name="model">sale.order</field>
             <field name="inherit_id" ref="sale.view_order_form" />
             <field name="arch" type="xml">
-                <button name="action_done" position="after">
-                    <field name="residual" invisible="1" />
+                <button name="payment_action_void" position="after">
                     <button
-                        name="%(action_sale_payment)d"
-                        type="action"
-                        attrs="{'invisible': ['|', ('state', 'not in', ('draft', 'sent')), ('residual', '=', 0.0)]}"
-                        string="Register Payment"
-                        class="oe_highlight"
-                    />
+                    name="action_register_payment"
+                    type="object"
+                    attrs="{'invisible': ['|', ('amount_residual', '&lt;=', 0), ('invoice_status', '=', 'invoiced')]}"
+                    string="Register Payment"
+                    class="oe_highlight"
+                />
                 </button>
-                <xpath expr="//page[2]" position="after">
+                <field name="amount_total" position="after">
+                    <div class="oe_subtotal_footer_separator oe_inline o_td_label">
+                        <label for="amount_down_payment" />
+                    </div>
+                    <field
+                    name="amount_down_payment"
+                    nolabel="1"
+                    class="oe_subtotal_footer_separator"
+                />
+                </field>
+                <xpath expr="//page[@name='other_information']" position="after">
                   <page name="payments" string="Payments">
-                    <field name="payment_ids" nolabel="1">
+                    <field name="amount_residual" invisible="1" />
+                    <field name="payment_line_ids" nolabel="1">
                         <tree string="Payment">
                             <field name="date" />
                             <field name="journal_id" />
@@ -57,15 +61,14 @@
             <field name="arch" type="xml">
                 <filter name="my_sale_orders_filter" position="before">
                     <filter
-                        string="With Payment"
-                        domain="[('payment_ids','!=',False)]"
-                        help="Order With Payment"
-                        name="with_payment"
-                    />
+                    string="With Payment"
+                    domain="[('payment_line_ids','!=',False)]"
+                    help="Order With Payment"
+                    name="with_payment"
+                />
                     <separator />
                 </filter>
             </field>
         </record>
 
-    </data>
 </odoo>
