--- a/sale_rental/views/product.xml
+++ b/sale_rental/views/product.xml
@@ -16,10 +16,11 @@
         <group name="sale" position="inside">
             <group
                     name="rental-service"
-                    string="Rental"
                     attrs="{'invisible': [('type', '!=', 'service')]}"
+                    string="Related Rented Services"
+                    col="1"
                 >
-                <field name="rented_product_id" />
+                <field name="rented_product_ids" nolabel="1" />
             </group>
             <group
                     name="rental-product"
@@ -54,7 +55,7 @@
                     string="Rental"
                     attrs="{'invisible': ['|', ('type', '!=', 'service'), ('product_variant_count', '>', 1)]}"
                 >
-                <field name="rented_product_tmpl_id" />
+                <field name="rented_product_tmpl_ids" nolabel="1" />
         </group>
                 <group
                     name="rental-product-template"
